# dyret_common

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/dyret_common/: angleConv.h  dimensions.h  joints.h  timeHandling.h  wait_for_ros.h
msg/: ActionMessage.msg  ActuatorStates.msg  Configuration.msg  DistAng.msg  GaitControllerStatus.msg  InverseKinematicsSolution.msg  Pose.msg  PrismaticConfig.msg  PrismaticState.msg  RevoluteConfig.msg  RevoluteState.msg  ServoConfig.msg  ServoConfigArray.msg  ServoConfigs.msg  ServoState.msg  ServoStateArray.msg  State.msg  Trajectory.msg
srv/: CalculateInverseKinematics.srv  Configure.srv  ConfigureServos.srv  GetGaitControllerStatus.srv  GetGaitEvaluation.srv
