<?xml version="1.0"?>
<package format="2">
	<name>dyret_common</name>
	<version>0.3.0</version>
	<description>Common code for 'DyRET'</description>
	<maintainer email="tonnesfn@ifi.uio.no">tonnesfn</maintainer>
	<license>GPL-3.0-or-later</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<exec_depend>message_runtime</exec_depend>

	<export>
	</export>
</package>
